fix: homepage - thumb container spacing

--- a/src/pages/styles/homepage.css
+++ b/src/pages/styles/homepage.css
@@ -24,6 +24,7 @@
     .thumb_container {
         grid-template-columns: 1fr;
         padding: 0;
+        margin-top: 1rem;
     }
 
     .Thumb {
